log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stamppong-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stamppong
  template:
    metadata:
      labels:
        app: stamppong
    spec:
      containers:
      - name: stamppong
        image: juhamyllari/stamppong:v3.2.0
        volumeMounts:
          - name: config-volume
            mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: log-configmap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
      - name: pingpong
        image: juhamyllari/pingpong:v3.4.0
