log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stamppong-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: stamppong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
